# versea

./: .pre-commit-config.yaml  LICENSE  pyproject.toml  resp.txt
versea/: __main__.py  types.py  versea.py
